<resources>
    <string name="app_name">System event sounds</string>
    <string name="wifi_on">Wi-Fi on</string>
    <string name="wifi_off">Wi-Fi off</string>
    <string name="airplane_mod_on">Airplane mode on</string>
    <string name="airplane_mod_off">Airplane mode off</string>
    <string name="active">Active</string>
    <string name="not_active">Not active</string>
    <string name="notification_title">System event sounds</string>
    <string name="notification_message">App is working…</string>
    <string name="ticker_text">System event sounds</string>
    <string name="mobile_inet_off">Mobile internet off</string>
    <string name="mobile_inet_on">Mobile internet on</string>
    <string name="bluetooth_on">Bluetooth on</string>
    <string name="bluetooth_off">Bluetooth off</string>
    <string name="screen_on">Screen on</string>
    <string name="screen_off">Screen off</string>
    <string name="usb_attached">Usb plugged in</string>
    <string name="usb_detached">Usb plugged out</string>
    <string name="app_installed">App installed</string>
    <string name="app_deleted">App deleted</string>
    <string name="headphones_plugged">Headphones plugged</string>
    <string name="headphones_unplugged">Headphones unplugged</string>
    <string name="text_to_speech">Text to speech</string>
    <string name="text_to_speak">Text to speech</string>
    <string name="music">Music file</string>
    <string name="file_name">File name</string>
    <string name="pick_file">Pick file</string>
    <string name="create">Update</string>
    <string name="updateEvent">Update event</string>
    <string name="wifi_on_default_text">You have turned on the Wi-Fi</string>
    <string name="wifi_off_default_text">You have turned off the Wi-Fi</string>
    <string name="mobile_inet_on_default_text">You have turned on mobile internet</string>
    <string name="mobile_inet_off_default_text">You have turned off mobile internet</string>
    <string name="airplane_mod_on_default_text">You have turned on airplane mode</string>
    <string name="airplane_mod_off_default_text">You have turned off airplane mode</string>
    <string name="bluetooth_on_default_text">You have turned on bluetooth</string>
    <string name="bluetooth_off_default_text">You have turned off bluetooth</string>
    <string name="screen_off_default_text">You have turned off the screen</string>
    <string name="screen_on_default_text">You have turned on the screen</string>
    <string name="usb_plugged_in_default_text">You have plugged in usb</string>
    <string name="usb_plugged_out_default_text">You have plugged out usb</string>
    <string name="app_installed_default_text">You have installed app</string>
    <string name="app_deleted_default_text">You have deleted app</string>
    <string name="headphones_plugged_default_text">You have plugged headphones</string>
    <string name="headphones_unplugged_default_text">You have unplugged headphones</string>
</resources>